--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,52 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* คุณสามารถกำหนด CSS Variables แบบปกติใน :root */
+@theme {
+  /* Breakpoints */
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 960px;
+  --breakpoint-xl: 1200px;
+
+  /* Container */
+  --container-padding: 15px;
+
+  /* Colors */
+  --color-primary: #121315;
+  --color-secondary: #666666;
+  --color-accent: #ffca3b;
+  --color-border: #d7d7d7;
+
+  /* Font */
+  --font-primary: "DM_Sans";
+  --font-secondary: "Barlow";
+
+  /* Shadow */
+  --shadow-custom: 0px 4px 54px 10px rgba(18, 19, 21, 0.06);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+/* ตั้งค่า background image สำหรับ body */
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply font-secondary text-secondary
+}
+
+h1, h2, h3, h4, h5, h6 {
+  @apply font-primary text-primary
+}
+
+.h1 {
+  @apply text-[40px] xl:text-[54px] uppercase font-black leading-[1.1];
+}
+
+.h2 {
+  @apply text-[36px] leading-[1.3] xl:text-[46px] xl:leading-[56px] capitalize font-bold;
+}
+
+.h3 {
+  @apply font-primary font-bold text-3xl;
+}
+
+.h4 {
+  @apply text-2xl font-semibold;
 }
