add hero & stats

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-/* คุณสามารถกำหนด CSS Variables แบบปกติใน :root */
 @theme {
   /* Breakpoints */
   --breakpoint-sm: 640px;
@@ -24,15 +23,15 @@
 
   /* Shadow */
   --shadow-custom: 0px 4px 54px 10px rgba(18, 19, 21, 0.06);
+
 }
 
-/* ตั้งค่า background image สำหรับ body */
 body {
   @apply font-secondary text-secondary
 }
 
 h1, h2, h3, h4, h5, h6 {
-  @apply font-primary text-primary
+  @apply font-primary
 }
 
 .h1 {
